opam-version: "1.2"
maintainer: "whitequark <whitequark@whitequark.org>"
authors: [ "whitequark <whitequark@whitequark.org>" ]
license: "MIT"
homepage: "https://github.com/whitequark/ppx_deriving"
doc: "https://whitequark.github.io/ppx_deriving"
bug-reports: "https://github.com/whitequark/ppx_deriving/issues"
dev-repo: "https://github.com/whitequark/ppx_deriving.git"
tags: [ "syntax" ]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
build-doc: [
  ["dune" "build" "@doc" "-p" name "-j" jobs]
]
depends: [
  "dune"     {build >= "1.0.0"}
  "cppo"     {build}
  "ppxfind"  {build}
  "ocaml-migrate-parsetree"
  "ppx_derivers"
  "ppx_tools"  {>= "4.02.3"}
  "result"
  "ounit"      {test}
]
available: [ ocaml-version >= "4.02" & opam-version >= "1.2" ]
