opam-version: "2.0"
maintainer: "whitequark <whitequark@whitequark.org>"
authors: [ "whitequark <whitequark@whitequark.org>" ]
license: "MIT"
homepage: "https://github.com/ocaml-ppx/ppx_deriving"
doc: "https://ocaml-ppx.github.io/ppx_deriving/"
bug-reports: "https://github.com/ocaml-ppx/ppx_deriving/issues"
dev-repo: "git+https://github.com/ocaml-ppx/ppx_deriving.git"
tags: [ "syntax" ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {>= "1.6.3"}
  "cppo" {build}
  "ocamlfind"
  "ppx_derivers"
  "ppxlib" {>= "0.20.0"}
  "result"
  "ounit2" {with-test}
]
synopsis: "Type-driven code generation for OCaml"
description: """
ppx_deriving provides common infrastructure for generating
code based on type definitions, and a set of useful plugins
for common tasks.
"""
