(executable
 (name print_test)
 (preprocess (pps ppx_deriving.show))
 (modules print_test))

(executable
 (name introduction)
 (preprocess (pps ppx_deriving.enum ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))
 (modules introduction))

(alias
 (name examples)
 (deps print_test.exe introduction.exe))
