(rule
 (deps ppx_deriving_create.cppo.ml)
 (targets ppx_deriving_create.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets})))

(library
 (name ppx_deriving_create)
 (public_name ppx_deriving.create)
 (synopsis "[@@deriving create]")
 (preprocess
  (action (run ppxfind -legacy ppx_tools.metaquot --as-pp %{input-file})))
 (libraries compiler-libs.common ppx_tools ppx_deriving.api)
 (kind ppx_deriver))
