(rule
 (targets ppx_deriving_create.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version}
              %{dep:ppx_deriving_create.cppo.ml} -o %{targets})))

(library
 (name ppx_deriving_create)
 (public_name ppx_deriving.create)
 (synopsis "[@@deriving create]")
 (preprocess
  (pps ppxlib.metaquot))
 (libraries compiler-libs.common ppxlib ppx_deriving.api)
 (kind ppx_deriver))
