(rule
 (targets ppx_deriving_enum.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version}
              %{dep:ppx_deriving_enum.cppo.ml} -o %{targets})))

(library
 (name ppx_deriving_enum)
 (public_name ppx_deriving.enum)
 (synopsis "[@@deriving enum]")
 (preprocess
  (pps ppxlib.metaquot))
 (libraries compiler-libs.common ppxlib ppx_deriving.api)
 (kind ppx_deriver))
