(rule
 (targets ppx_deriving_eq.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version}
              %{dep:ppx_deriving_eq.cppo.ml} -o %{targets})))

(library
 (name ppx_deriving_eq)
 (public_name ppx_deriving.eq)
 (synopsis "[@@deriving eq]")
 (preprocess
  (pps ppxlib.metaquot))
 (libraries compiler-libs.common ppxlib ppx_deriving.api)
 (kind ppx_deriver))
