(rule
 (targets ppx_deriving_fold.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{dep:ppx_deriving_fold.cppo.ml} -o %{targets})))

(library
 (name ppx_deriving_fold)
 (public_name ppx_deriving.fold)
 (synopsis "[@@deriving fold]")
 (preprocess
  (pps ppxlib.metaquot))
 (libraries compiler-libs.common ppxlib ppx_deriving.api)
 (kind ppx_deriver))
