(rule
 (deps ppx_deriving_map.cppo.ml)
 (targets ppx_deriving_map.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets})))

(library
 (name ppx_deriving_map)
 (public_name ppx_deriving.map)
 (synopsis "[@@deriving map]")
 (preprocess
  (pps ppxlib.metaquot))
 (libraries compiler-libs.common ppxlib ppx_deriving.api)
 (kind ppx_deriver))
