(rule
 (deps ppx_deriving_ord.cppo.ml)
 (targets ppx_deriving_ord.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets})))

(library
 (name ppx_deriving_ord)
 (public_name ppx_deriving.ord)
 (synopsis "[@@deriving ord]")
 (preprocess
  (action (run ppxfind -legacy ppx_tools.metaquot --as-pp %{input-file})))
 (libraries compiler-libs.common ppx_tools ppx_deriving.api)
 (kind ppx_deriver))
